<resources>
    <string name="app_name">PhoneBook</string>

    <string-array name="time_types">
        <item>초</item>
        <item>분</item>
        <item>시간</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="load_dialog_title">연락처를 불러오시겠습니까?</string>
    <string name="load_dialog_body">연락처를 동기화시킬 수 있습니다.\n(권한을 요청합니다.)</string>
    <string name="reject">거부</string>
    <string name="confirm">확인</string>
    <string name="read_contact_reject_msg">연락처 접근 권한이 필요합니다.</string>
    <string name="detail_btn_message">Message</string>
    <string name="detail_btn_call">call</string>

    <string name="login_jh_name">박정호</string>
    <string name="login_gr_name">임가람</string>
    <string name="login_sm_name">성승모</string>
    <string name="login_dh_name">김대현</string>

</resources>