<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment"
    android:background="@color/mainTurquoise">

    <TextView
        android:id="@+id/login_jh_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="180dp"
        android:layout_marginStart="60dp"

        android:background="@drawable/rectangle_round"
        android:text="@string/login_jh_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_galmuri"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/login_gr_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"

        app:layout_constraintTop_toTopOf="@id/login_jh_btn"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="60dp"

        android:background="@drawable/rectangle_round"
        android:text="@string/login_gr_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/font_galmuri"
        />
    <TextView
        android:id="@+id/login_sm_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"

        app:layout_constraintTop_toBottomOf="@id/login_jh_btn"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp"

        android:background="@drawable/rectangle_round"
        android:text="@string/login_sm_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/font_galmuri"
        />
    <TextView
        android:id="@+id/login_dh_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"

        app:layout_constraintTop_toTopOf="@id/login_sm_btn"
        app:layout_constraintEnd_toEndOf="@id/login_gr_btn"


        android:background="@drawable/rectangle_round"
        android:text="@string/login_dh_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/font_galmuri"
        />

</androidx.constraintlayout.widget.ConstraintLayout>