<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialog.LoadContactDialog">

    <TextView
        android:id="@+id/load_dialog_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/load_dialog_title"
        android:textSize="24sp"
        android:textStyle="bold"

        android:gravity="center"
        android:background="@color/mainTurquoise"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/load_dialog_body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/load_dialog_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="15dp"

        android:text="@string/load_dialog_body"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/load_dialog_button_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/load_dialog_body_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="15dp"

        android:orientation="horizontal"

        android:weightSum="2"
        >
        <TextView
            android:id="@+id/load_dialog_reject_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/reject"
            android:textSize="18sp"
            android:textStyle="bold"

            android:gravity="center"
            android:layout_weight="1"

            android:padding="10dp"

            android:background="@drawable/rectangle_with_border"
            />
        <TextView
            android:id="@+id/load_dialog_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/confirm"
            android:textSize="18sp"
            android:textStyle="bold"

            android:gravity="center"
            android:layout_weight="1"

            android:padding="10dp"

            android:background="@drawable/rectangle_with_border"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>